src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_10_environment.snap
---
source: src/tests/let_statements/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {
            "flatcase": Integer {
                value: 3,
            },
        },
        sub_environment: None,
    },
}
