src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_10_syntax_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "flatcase",
            expression: Integer {
                literal: 3,
            },
        },
    },
]
