src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_11_lexical_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "camelCase",
    },
    Assign,
    False,
    EndOfFile,
]
