src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_12_environment.snap
---
source: src/tests/let_statements/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {
            "PascalCase": String {
                value: "terrible format",
            },
        },
        sub_environment: None,
    },
}
