src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_13_environment.snap
---
source: src/tests/let_statements/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "UPPER_CASE_SNAKE_CASE": False,
        },
        sub_environment: None,
    },
}
